// metamodel_version: 1.7.0
// version: 2.0.0
// an attributed description
message AltDescription
 {
  optional source String = 1
  description String = 2
 }
// a tag/value pair with the semantics of OWL Annotation
message Annotation
 {
  optional tag Uriorcurie = 1
  value String = 2
  repeated extensions Extension = 3
  repeated annotations Annotation = 4
 }
message AnonymousClassExpression
 {
  repeated extensions Extension = 1
  repeated annotations Annotation = 2
  optional description String = 3
  repeated altDescriptions AltDescription = 4
  optional title String = 5
  optional deprecated String = 6
  repeated todos String = 7
  repeated notes String = 8
  repeated comments String = 9
  repeated examples Example = 10
  repeated inSubset SubsetDefinition = 11
  optional fromSchema Uri = 12
  optional importedFrom String = 13
  optional source Uriorcurie = 14
  optional inLanguage String = 15
  repeated seeAlso Uriorcurie = 16
  optional deprecatedElementHasExactReplacement Uriorcurie = 17
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 18
  repeated aliases String = 19
  repeated structuredAliases StructuredAlias = 20
  repeated mappings Uriorcurie = 21
  repeated exactMappings Uriorcurie = 22
  repeated closeMappings Uriorcurie = 23
  repeated relatedMappings Uriorcurie = 24
  repeated narrowMappings Uriorcurie = 25
  repeated broadMappings Uriorcurie = 26
  optional rank Integer = 27
  optional isA Definition = 28
  repeated anyOf AnonymousClassExpression = 29
  repeated exactlyOneOf AnonymousClassExpression = 30
  repeated noneOf AnonymousClassExpression = 31
  repeated allOf AnonymousClassExpression = 32
  repeated slotConditions SlotDefinition = 33
 }
message AnonymousSlotExpression
 {
  repeated extensions Extension = 1
  repeated annotations Annotation = 2
  optional description String = 3
  repeated altDescriptions AltDescription = 4
  optional title String = 5
  optional deprecated String = 6
  repeated todos String = 7
  repeated notes String = 8
  repeated comments String = 9
  repeated examples Example = 10
  repeated inSubset SubsetDefinition = 11
  optional fromSchema Uri = 12
  optional importedFrom String = 13
  optional source Uriorcurie = 14
  optional inLanguage String = 15
  repeated seeAlso Uriorcurie = 16
  optional deprecatedElementHasExactReplacement Uriorcurie = 17
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 18
  repeated aliases String = 19
  repeated structuredAliases StructuredAlias = 20
  repeated mappings Uriorcurie = 21
  repeated exactMappings Uriorcurie = 22
  repeated closeMappings Uriorcurie = 23
  repeated relatedMappings Uriorcurie = 24
  repeated narrowMappings Uriorcurie = 25
  repeated broadMappings Uriorcurie = 26
  optional rank Integer = 27
  optional range Element = 28
  optional rangeExpression AnonymousClassExpression = 29
  optional required Boolean = 30
  optional recommended Boolean = 31
  optional inlined Boolean = 32
  optional inlinedAsList Boolean = 33
  optional minimumValue Integer = 34
  optional maximumValue Integer = 35
  optional pattern String = 36
  optional structuredPattern PatternExpression = 37
  optional equalsString String = 38
  repeated equalsStringIn String = 39
  optional equalsNumber Integer = 40
  optional equalsExpression String = 41
  optional minimumCardinality Integer = 42
  optional maximumCardinality Integer = 43
  optional hasMember AnonymousSlotExpression = 44
  repeated allMembers SlotDefinition = 45
  repeated noneOf AnonymousSlotExpression = 46
  repeated exactlyOneOf AnonymousSlotExpression = 47
  repeated anyOf AnonymousSlotExpression = 48
  repeated allOf AnonymousSlotExpression = 49
 }
message AnonymousTypeExpression
 {
  optional pattern String = 1
  optional structuredPattern PatternExpression = 2
  optional equalsString String = 3
  repeated equalsStringIn String = 4
  optional equalsNumber Integer = 5
  optional minimumValue Integer = 6
  optional maximumValue Integer = 7
  repeated noneOf AnonymousTypeExpression = 8
  repeated exactlyOneOf AnonymousTypeExpression = 9
  repeated anyOf AnonymousTypeExpression = 10
  repeated allOf AnonymousTypeExpression = 11
 }
// the definition of a class or interface
message ClassDefinition
 {
  name String = 1
  repeated idPrefixes Ncname = 2
  optional definitionUri Uriorcurie = 3
  repeated localNames LocalName = 4
  optional conformsTo String = 5
  repeated extensions Extension = 6
  repeated annotations Annotation = 7
  optional description String = 8
  repeated altDescriptions AltDescription = 9
  optional title String = 10
  optional deprecated String = 11
  repeated todos String = 12
  repeated notes String = 13
  repeated comments String = 14
  repeated examples Example = 15
  repeated inSubset SubsetDefinition = 16
  optional fromSchema Uri = 17
  optional importedFrom String = 18
  optional source Uriorcurie = 19
  optional inLanguage String = 20
  repeated seeAlso Uriorcurie = 21
  optional deprecatedElementHasExactReplacement Uriorcurie = 22
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 23
  repeated aliases String = 24
  repeated structuredAliases StructuredAlias = 25
  repeated mappings Uriorcurie = 26
  repeated exactMappings Uriorcurie = 27
  repeated closeMappings Uriorcurie = 28
  repeated relatedMappings Uriorcurie = 29
  repeated narrowMappings Uriorcurie = 30
  repeated broadMappings Uriorcurie = 31
  optional rank Integer = 32
  optional abstract Boolean = 33
  optional mixin Boolean = 34
  repeated valuesFrom Uriorcurie = 35
  optional createdBy Uriorcurie = 36
  optional createdOn Datetime = 37
  optional lastUpdatedOn Datetime = 38
  optional modifiedBy Uriorcurie = 39
  optional status Uriorcurie = 40
  optional stringSerialization String = 41
  repeated slots SlotDefinition = 42
  repeated slotUsage SlotDefinition = 43
  repeated attributes SlotDefinition = 44
  optional classUri Uriorcurie = 45
  optional subclassOf Uriorcurie = 46
  repeated unionOf ClassDefinition = 47
  repeated definingSlots SlotDefinition = 48
  optional treeRoot Boolean = 49
  repeated uniqueKeys UniqueKey = 50
  repeated rules ClassRule = 51
  repeated classificationRules AnonymousClassExpression = 52
  optional slotNamesUnique Boolean = 53
  optional representsRelationship Boolean = 54
  repeated disjointWith ClassDefinition = 55
  optional childrenAreMutuallyDisjoint Boolean = 56
  optional isA ClassDefinition = 57
  repeated mixins ClassDefinition = 58
  repeated applyTo ClassDefinition = 59
  repeated anyOf AnonymousClassExpression = 60
  repeated exactlyOneOf AnonymousClassExpression = 61
  repeated noneOf AnonymousClassExpression = 62
  repeated allOf AnonymousClassExpression = 63
  repeated slotConditions SlotDefinition = 64
 }
// A rule that applies to instances of a class
message ClassRule
 {
  optional preconditions AnonymousClassExpression = 1
  optional postconditions AnonymousClassExpression = 2
  optional elseconditions AnonymousClassExpression = 3
  optional bidirectional Boolean = 4
  optional openWorld Boolean = 5
  optional rank Integer = 6
  optional deactivated Boolean = 7
  repeated extensions Extension = 8
  repeated annotations Annotation = 9
  optional description String = 10
  repeated altDescriptions AltDescription = 11
  optional title String = 12
  optional deprecated String = 13
  repeated todos String = 14
  repeated notes String = 15
  repeated comments String = 16
  repeated examples Example = 17
  repeated inSubset SubsetDefinition = 18
  optional fromSchema Uri = 19
  optional importedFrom String = 20
  optional source Uriorcurie = 21
  optional inLanguage String = 22
  repeated seeAlso Uriorcurie = 23
  optional deprecatedElementHasExactReplacement Uriorcurie = 24
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 25
  repeated aliases String = 26
  repeated structuredAliases StructuredAlias = 27
  repeated mappings Uriorcurie = 28
  repeated exactMappings Uriorcurie = 29
  repeated closeMappings Uriorcurie = 30
  repeated relatedMappings Uriorcurie = 31
  repeated narrowMappings Uriorcurie = 32
  repeated broadMappings Uriorcurie = 33
 }
// List of values that constrain the range of a slot
message EnumDefinition
 {
  name String = 1
  repeated idPrefixes Ncname = 2
  optional definitionUri Uriorcurie = 3
  repeated localNames LocalName = 4
  optional conformsTo String = 5
  repeated extensions Extension = 6
  repeated annotations Annotation = 7
  optional description String = 8
  repeated altDescriptions AltDescription = 9
  optional title String = 10
  optional deprecated String = 11
  repeated todos String = 12
  repeated notes String = 13
  repeated comments String = 14
  repeated examples Example = 15
  repeated inSubset SubsetDefinition = 16
  optional fromSchema Uri = 17
  optional importedFrom String = 18
  optional source Uriorcurie = 19
  optional inLanguage String = 20
  repeated seeAlso Uriorcurie = 21
  optional deprecatedElementHasExactReplacement Uriorcurie = 22
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 23
  repeated aliases String = 24
  repeated structuredAliases StructuredAlias = 25
  repeated mappings Uriorcurie = 26
  repeated exactMappings Uriorcurie = 27
  repeated closeMappings Uriorcurie = 28
  repeated relatedMappings Uriorcurie = 29
  repeated narrowMappings Uriorcurie = 30
  repeated broadMappings Uriorcurie = 31
  optional rank Integer = 32
  optional codeSet Uriorcurie = 33
  optional codeSetTag String = 34
  optional codeSetVersion String = 35
  optional pvFormula PvFormulaOptions = 36
  repeated permissibleValues PermissibleValue = 37
 }
// usage example and description
message Example
 {
  optional value String = 1
  optional description String = 2
 }
// a tag/value pair used to add non-model information to an entry
message Extension
 {
  optional tag Uriorcurie = 1
  value String = 2
  repeated extensions Extension = 3
 }
// an expression describing an import
message ImportExpression
 {
  importFrom Uriorcurie = 1
  optional importAs Ncname = 2
  repeated importMap Setting = 3
  repeated extensions Extension = 4
  repeated annotations Annotation = 5
  optional description String = 6
  repeated altDescriptions AltDescription = 7
  optional title String = 8
  optional deprecated String = 9
  repeated todos String = 10
  repeated notes String = 11
  repeated comments String = 12
  repeated examples Example = 13
  repeated inSubset SubsetDefinition = 14
  optional fromSchema Uri = 15
  optional importedFrom String = 16
  optional source Uriorcurie = 17
  optional inLanguage String = 18
  repeated seeAlso Uriorcurie = 19
  optional deprecatedElementHasExactReplacement Uriorcurie = 20
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 21
  repeated aliases String = 22
  repeated structuredAliases StructuredAlias = 23
  repeated mappings Uriorcurie = 24
  repeated exactMappings Uriorcurie = 25
  repeated closeMappings Uriorcurie = 26
  repeated relatedMappings Uriorcurie = 27
  repeated narrowMappings Uriorcurie = 28
  repeated broadMappings Uriorcurie = 29
  optional rank Integer = 30
 }
// an attributed label
message LocalName
 {
  optional localNameSource Ncname = 1
  localNameValue String = 2
 }
// An expression that describes an abstract path from an object to another through a sequence of slot lookups
message PathExpression
 {
  optional followedBy PathExpression = 1
  repeated noneOf PathExpression = 2
  repeated anyOf PathExpression = 3
  repeated allOf PathExpression = 4
  repeated exactlyOneOf PathExpression = 5
  optional reversed Boolean = 6
  optional traverse SlotDefinition = 7
  optional rangeExpression AnonymousClassExpression = 8
  repeated extensions Extension = 9
  repeated annotations Annotation = 10
  optional description String = 11
  repeated altDescriptions AltDescription = 12
  optional title String = 13
  optional deprecated String = 14
  repeated todos String = 15
  repeated notes String = 16
  repeated comments String = 17
  repeated examples Example = 18
  repeated inSubset SubsetDefinition = 19
  optional fromSchema Uri = 20
  optional importedFrom String = 21
  optional source Uriorcurie = 22
  optional inLanguage String = 23
  repeated seeAlso Uriorcurie = 24
  optional deprecatedElementHasExactReplacement Uriorcurie = 25
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 26
  repeated aliases String = 27
  repeated structuredAliases StructuredAlias = 28
  repeated mappings Uriorcurie = 29
  repeated exactMappings Uriorcurie = 30
  repeated closeMappings Uriorcurie = 31
  repeated relatedMappings Uriorcurie = 32
  repeated narrowMappings Uriorcurie = 33
  repeated broadMappings Uriorcurie = 34
  optional rank Integer = 35
 }
// a regular expression pattern used to evaluate conformance of a string
message PatternExpression
 {
  optional syntax String = 1
  optional interpolated Boolean = 2
  optional partialMatch Boolean = 3
  repeated extensions Extension = 4
  repeated annotations Annotation = 5
  optional description String = 6
  repeated altDescriptions AltDescription = 7
  optional title String = 8
  optional deprecated String = 9
  repeated todos String = 10
  repeated notes String = 11
  repeated comments String = 12
  repeated examples Example = 13
  repeated inSubset SubsetDefinition = 14
  optional fromSchema Uri = 15
  optional importedFrom String = 16
  optional source Uriorcurie = 17
  optional inLanguage String = 18
  repeated seeAlso Uriorcurie = 19
  optional deprecatedElementHasExactReplacement Uriorcurie = 20
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 21
  repeated aliases String = 22
  repeated structuredAliases StructuredAlias = 23
  repeated mappings Uriorcurie = 24
  repeated exactMappings Uriorcurie = 25
  repeated closeMappings Uriorcurie = 26
  repeated relatedMappings Uriorcurie = 27
  repeated narrowMappings Uriorcurie = 28
  repeated broadMappings Uriorcurie = 29
  optional rank Integer = 30
 }
// a permissible value, accompanied by intended text and an optional mapping to a concept URI
message PermissibleValue
 {
  text String = 1
  optional description String = 2
  optional meaning Uriorcurie = 3
  optional isA PermissibleValue = 4
  repeated mixins PermissibleValue = 5
  repeated extensions Extension = 6
  repeated annotations Annotation = 7
  repeated altDescriptions AltDescription = 8
  optional title String = 9
  optional deprecated String = 10
  repeated todos String = 11
  repeated notes String = 12
  repeated comments String = 13
  repeated examples Example = 14
  repeated inSubset SubsetDefinition = 15
  optional fromSchema Uri = 16
  optional importedFrom String = 17
  optional source Uriorcurie = 18
  optional inLanguage String = 19
  repeated seeAlso Uriorcurie = 20
  optional deprecatedElementHasExactReplacement Uriorcurie = 21
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 22
  repeated aliases String = 23
  repeated structuredAliases StructuredAlias = 24
  repeated mappings Uriorcurie = 25
  repeated exactMappings Uriorcurie = 26
  repeated closeMappings Uriorcurie = 27
  repeated relatedMappings Uriorcurie = 28
  repeated narrowMappings Uriorcurie = 29
  repeated broadMappings Uriorcurie = 30
  optional rank Integer = 31
 }
// prefix URI tuple
message Prefix
 {
  optional prefixPrefix Ncname = 1
  prefixReference Uri = 2
 }
// a collection of subset, type, slot and class definitions
message SchemaDefinition
 {
  repeated idPrefixes Ncname = 1
  optional definitionUri Uriorcurie = 2
  repeated localNames LocalName = 3
  optional conformsTo String = 4
  repeated extensions Extension = 5
  repeated annotations Annotation = 6
  optional description String = 7
  repeated altDescriptions AltDescription = 8
  optional title String = 9
  optional deprecated String = 10
  repeated todos String = 11
  repeated notes String = 12
  repeated comments String = 13
  repeated examples Example = 14
  repeated inSubset SubsetDefinition = 15
  optional fromSchema Uri = 16
  optional importedFrom String = 17
  optional source Uriorcurie = 18
  optional inLanguage String = 19
  repeated seeAlso Uriorcurie = 20
  optional deprecatedElementHasExactReplacement Uriorcurie = 21
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 22
  repeated aliases String = 23
  repeated structuredAliases StructuredAlias = 24
  repeated mappings Uriorcurie = 25
  repeated exactMappings Uriorcurie = 26
  repeated closeMappings Uriorcurie = 27
  repeated relatedMappings Uriorcurie = 28
  repeated narrowMappings Uriorcurie = 29
  repeated broadMappings Uriorcurie = 30
  optional rank Integer = 31
  id Uri = 32
  optional version String = 33
  repeated imports Uriorcurie = 34
  optional license String = 35
  repeated prefixes Prefix = 36
  repeated emitPrefixes Ncname = 37
  repeated defaultCuriMaps String = 38
  optional defaultPrefix String = 39
  optional defaultRange TypeDefinition = 40
  repeated subsets SubsetDefinition = 41
  repeated types TypeDefinition = 42
  repeated enums EnumDefinition = 43
  repeated slots SlotDefinition = 44
  repeated classes ClassDefinition = 45
  optional metamodelVersion String = 46
  optional sourceFile String = 47
  optional sourceFileDate Datetime = 48
  optional sourceFileSize Integer = 49
  optional generationDate Datetime = 50
  optional slotNamesUnique Boolean = 51
  repeated settings Setting = 52
  repeated categories Uriorcurie = 53
  repeated keywords String = 54
  name Ncname = 55
 }
// assignment of a key to a value
message Setting
 {
  optional settingKey Ncname = 1
  settingValue String = 2
 }
// the definition of a property or a slot
message SlotDefinition
 {
  name String = 1
  repeated idPrefixes Ncname = 2
  optional definitionUri Uriorcurie = 3
  repeated localNames LocalName = 4
  optional conformsTo String = 5
  repeated extensions Extension = 6
  repeated annotations Annotation = 7
  optional description String = 8
  repeated altDescriptions AltDescription = 9
  optional title String = 10
  optional deprecated String = 11
  repeated todos String = 12
  repeated notes String = 13
  repeated comments String = 14
  repeated examples Example = 15
  repeated inSubset SubsetDefinition = 16
  optional fromSchema Uri = 17
  optional importedFrom String = 18
  optional source Uriorcurie = 19
  optional inLanguage String = 20
  repeated seeAlso Uriorcurie = 21
  optional deprecatedElementHasExactReplacement Uriorcurie = 22
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 23
  repeated aliases String = 24
  repeated structuredAliases StructuredAlias = 25
  repeated mappings Uriorcurie = 26
  repeated exactMappings Uriorcurie = 27
  repeated closeMappings Uriorcurie = 28
  repeated relatedMappings Uriorcurie = 29
  repeated narrowMappings Uriorcurie = 30
  repeated broadMappings Uriorcurie = 31
  optional rank Integer = 32
  optional abstract Boolean = 33
  optional mixin Boolean = 34
  repeated valuesFrom Uriorcurie = 35
  optional createdBy Uriorcurie = 36
  optional createdOn Datetime = 37
  optional lastUpdatedOn Datetime = 38
  optional modifiedBy Uriorcurie = 39
  optional status Uriorcurie = 40
  optional stringSerialization String = 41
  optional singularName String = 42
  optional domain ClassDefinition = 43
  optional slotUri Uriorcurie = 44
  optional multivalued Boolean = 45
  optional inherited Boolean = 46
  optional readonly String = 47
  optional ifabsent String = 48
  optional listElementsUnique Boolean = 49
  optional listElementsOrdered Boolean = 50
  optional shared Boolean = 51
  optional key Boolean = 52
  optional identifier Boolean = 53
  optional designatesType Boolean = 54
  optional alias String = 55
  optional owner Definition = 56
  repeated domainOf ClassDefinition = 57
  optional subpropertyOf SlotDefinition = 58
  optional symmetric Boolean = 59
  optional reflexive Boolean = 60
  optional locallyReflexive Boolean = 61
  optional irreflexive Boolean = 62
  optional asymmetric Boolean = 63
  optional transitive Boolean = 64
  optional inverse SlotDefinition = 65
  optional isClassField Boolean = 66
  optional transitiveFormOf SlotDefinition = 67
  optional reflexiveTransitiveFormOf SlotDefinition = 68
  optional role String = 69
  optional isUsageSlot Boolean = 70
  optional usageSlotName String = 71
  optional relationalRole RelationalRoleEnum = 72
  optional slotGroup SlotDefinition = 73
  optional isGroupingSlot Boolean = 74
  optional pathRule PathExpression = 75
  repeated disjointWith SlotDefinition = 76
  optional childrenAreMutuallyDisjoint Boolean = 77
  optional isA SlotDefinition = 78
  repeated mixins SlotDefinition = 79
  repeated applyTo SlotDefinition = 80
  optional range Element = 81
  optional rangeExpression AnonymousClassExpression = 82
  optional required Boolean = 83
  optional recommended Boolean = 84
  optional inlined Boolean = 85
  optional inlinedAsList Boolean = 86
  optional minimumValue Integer = 87
  optional maximumValue Integer = 88
  optional pattern String = 89
  optional structuredPattern PatternExpression = 90
  optional equalsString String = 91
  repeated equalsStringIn String = 92
  optional equalsNumber Integer = 93
  optional equalsExpression String = 94
  optional minimumCardinality Integer = 95
  optional maximumCardinality Integer = 96
  optional hasMember AnonymousSlotExpression = 97
  repeated allMembers SlotDefinition = 98
  repeated noneOf AnonymousSlotExpression = 99
  repeated exactlyOneOf AnonymousSlotExpression = 100
  repeated anyOf AnonymousSlotExpression = 101
  repeated allOf AnonymousSlotExpression = 102
 }
// object that contains meta data about a synonym or alias including where it came from (source) and its scope (narrow, broad, etc.)
message StructuredAlias
 {
  literalForm String = 1
  optional predicate AliasPredicateEnum = 2
  repeated categories Uriorcurie = 3
  repeated extensions Extension = 4
  repeated annotations Annotation = 5
  optional description String = 6
  repeated altDescriptions AltDescription = 7
  optional title String = 8
  optional deprecated String = 9
  repeated todos String = 10
  repeated notes String = 11
  repeated comments String = 12
  repeated examples Example = 13
  repeated inSubset SubsetDefinition = 14
  optional fromSchema Uri = 15
  optional importedFrom String = 16
  optional source Uriorcurie = 17
  optional inLanguage String = 18
  repeated seeAlso Uriorcurie = 19
  optional deprecatedElementHasExactReplacement Uriorcurie = 20
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 21
  repeated aliases String = 22
  repeated structuredAliases StructuredAlias = 23
  repeated mappings Uriorcurie = 24
  repeated exactMappings Uriorcurie = 25
  repeated closeMappings Uriorcurie = 26
  repeated relatedMappings Uriorcurie = 27
  repeated narrowMappings Uriorcurie = 28
  repeated broadMappings Uriorcurie = 29
  optional rank Integer = 30
 }
// the name and description of a subset
message SubsetDefinition
 {
  name String = 1
  repeated idPrefixes Ncname = 2
  optional definitionUri Uriorcurie = 3
  repeated localNames LocalName = 4
  optional conformsTo String = 5
  repeated extensions Extension = 6
  repeated annotations Annotation = 7
  optional description String = 8
  repeated altDescriptions AltDescription = 9
  optional title String = 10
  optional deprecated String = 11
  repeated todos String = 12
  repeated notes String = 13
  repeated comments String = 14
  repeated examples Example = 15
  repeated inSubset SubsetDefinition = 16
  optional fromSchema Uri = 17
  optional importedFrom String = 18
  optional source Uriorcurie = 19
  optional inLanguage String = 20
  repeated seeAlso Uriorcurie = 21
  optional deprecatedElementHasExactReplacement Uriorcurie = 22
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 23
  repeated aliases String = 24
  repeated structuredAliases StructuredAlias = 25
  repeated mappings Uriorcurie = 26
  repeated exactMappings Uriorcurie = 27
  repeated closeMappings Uriorcurie = 28
  repeated relatedMappings Uriorcurie = 29
  repeated narrowMappings Uriorcurie = 30
  repeated broadMappings Uriorcurie = 31
  optional rank Integer = 32
 }
// A data type definition.
message TypeDefinition
 {
  name String = 1
  repeated idPrefixes Ncname = 2
  optional definitionUri Uriorcurie = 3
  repeated localNames LocalName = 4
  optional conformsTo String = 5
  repeated extensions Extension = 6
  repeated annotations Annotation = 7
  optional description String = 8
  repeated altDescriptions AltDescription = 9
  optional title String = 10
  optional deprecated String = 11
  repeated todos String = 12
  repeated notes String = 13
  repeated comments String = 14
  repeated examples Example = 15
  repeated inSubset SubsetDefinition = 16
  optional fromSchema Uri = 17
  optional importedFrom String = 18
  optional source Uriorcurie = 19
  optional inLanguage String = 20
  repeated seeAlso Uriorcurie = 21
  optional deprecatedElementHasExactReplacement Uriorcurie = 22
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 23
  repeated aliases String = 24
  repeated structuredAliases StructuredAlias = 25
  repeated mappings Uriorcurie = 26
  repeated exactMappings Uriorcurie = 27
  repeated closeMappings Uriorcurie = 28
  repeated relatedMappings Uriorcurie = 29
  repeated narrowMappings Uriorcurie = 30
  repeated broadMappings Uriorcurie = 31
  optional rank Integer = 32
  optional typeof TypeDefinition = 33
  optional base String = 34
  optional uri Uriorcurie = 35
  optional repr String = 36
  optional pattern String = 37
  optional structuredPattern PatternExpression = 38
  optional equalsString String = 39
  repeated equalsStringIn String = 40
  optional equalsNumber Integer = 41
  optional minimumValue Integer = 42
  optional maximumValue Integer = 43
  repeated noneOf AnonymousTypeExpression = 44
  repeated exactlyOneOf AnonymousTypeExpression = 45
  repeated anyOf AnonymousTypeExpression = 46
  repeated allOf AnonymousTypeExpression = 47
 }
// a collection of slots whose values uniquely identify an instance of a class
message UniqueKey
 {
  optional uniqueKeyName String = 1
  repeated uniqueKeySlots SlotDefinition = 2
  repeated extensions Extension = 3
  repeated annotations Annotation = 4
  optional description String = 5
  repeated altDescriptions AltDescription = 6
  optional title String = 7
  optional deprecated String = 8
  repeated todos String = 9
  repeated notes String = 10
  repeated comments String = 11
  repeated examples Example = 12
  repeated inSubset SubsetDefinition = 13
  optional fromSchema Uri = 14
  optional importedFrom String = 15
  optional source Uriorcurie = 16
  optional inLanguage String = 17
  repeated seeAlso Uriorcurie = 18
  optional deprecatedElementHasExactReplacement Uriorcurie = 19
  optional deprecatedElementHasPossibleReplacement Uriorcurie = 20
  repeated aliases String = 21
  repeated structuredAliases StructuredAlias = 22
  repeated mappings Uriorcurie = 23
  repeated exactMappings Uriorcurie = 24
  repeated closeMappings Uriorcurie = 25
  repeated relatedMappings Uriorcurie = 26
  repeated narrowMappings Uriorcurie = 27
  repeated broadMappings Uriorcurie = 28
  optional rank Integer = 29
 }

